<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">康宝</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_bottom">©2013\n华南理工大学\n广东康宝电器有限公司</string>
    <string name="splash_name">家庭信息系统</string>
    <string name="agreement">家庭信息系统使用协议</string>

    <!-- security activity -->
    <string name="security_deploy">启动</string>
    <string name="security_undeploy">撤防</string>
    <string name="security_unbind_toast">手机端安防模块已停止运行</string>
    <string name="security_edit">编辑</string>
    <string name="security_delete">删除</string>
    <string name="security_alert_title">注意</string>
    <string name="security_alert_content">是否移除选定设备</string>
    <string name="security_dialog_choose_something">请在列表中勾选需要移除的设备</string>


    <!-- Diaolog -->
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="dialog_ok">确认</string>
    <string name="dialog_cancel">取消</string>
    
    <!-- Activity_User -->
    <string name="login_username">用户名</string>
    <string name="login_password">密    码</string>
    <string name="login_login">登陆</string>
    <string name="login_lan">内网控制</string>
    <string name="login_save_user">记住用户名</string>
    <string name="login_save_pswd">记住密码  </string>
    
    <string name="login_doing">登录中...</string>
    <string name="tips">提示</string>
    <string name="login_user_not_exist">用户不存在</string>
    <string name="login_pswd_wrong">密码错误</string>
    <string name="login_host_not_running">家庭主控未运行</string>
    <string name="login_to_verify">未验证</string>
    <string name="login_http_timeout">网络请求超时，请检查网络是否可用</string>
    <string name="login_json_parsing_error">数据解析错误</string>
    <string name="login_network_request_error">未能连接上服务器</string>
    <string name="login_input_null">请填写完整信息</string>
    
    <!-- 常用 -->
    <string name="global_OK">确定</string>
    <string name="global_CANCEL">取消</string>
    <string name="global_NEXT">下一步</string>
    
</resources>