<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
	        android:focusable="true"
	        android:focusableInTouchMode="true"
        android:layout_above="@+id/login_lin_btns" >
	
	    <LinearLayout
	        android:id="@+id/login_lin_save"
	        android:layout_width="match_parent"
	        android:layout_height="30dp"
	        android:layout_alignParentBottom="true"
		    android:layout_marginBottom="4dp"
		    android:orientation="horizontal"
	        android:gravity="center" >

	        <CheckBox
	            android:id="@+id/login_chbx_save_user"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/login_save_user" />
	        <CheckBox
	            android:id="@+id/login_chbx_save_pswd"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/login_save_pswd" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/login_lin_pswd"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:layout_above="@id/login_lin_save"
	        android:gravity="center" >
		    <TextView
		        android:id="@+id/textView2"
	            android:layout_width="60dp"
	            android:gravity="center_horizontal"
		        android:layout_height="wrap_content"
	            android:text="@string/login_password" />
		    <EditText
		        android:id="@+id/login_edtx_password"
	            android:layout_width="220dp"
	            android:layout_marginRight="30dp"
	            android:background="@drawable/main_edtx_normal"
		        android:layout_height="50dp"
		        android:ems="10"
		        android:inputType="textPassword" />
	    </LinearLayout>
            
	    <LinearLayout
	        android:id="@+id/login_lin_username"
	        android:layout_width="match_parent"
	        android:layout_height="60dp"
	        android:layout_above="@id/login_lin_pswd"
	        android:gravity="center" >
	        
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="60dp"
	            android:gravity="center_horizontal"
	            android:layout_height="wrap_content"
	            android:text="@string/login_username" />
	        <EditText
	            android:background="@drawable/main_edtx_normal"
	            android:id="@+id/login_edtx_username"
	            android:layout_marginRight="30dp"
	            android:layout_width="220dp"
		        android:layout_height="50dp"
		        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
	            android:ems="10"	         
	            android:inputType="textPersonName" />
	    </LinearLayout>
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/login_lin_username" >
	            <LinearLayout 
	                android:layout_height="wrap_content"
	                android:layout_width="wrap_content"
	                android:layout_gravity="center"
	                android:orientation="vertical">                
			        <ImageView
			            android:id="@+id/imageView1"
			            android:layout_width="253dp"
			            android:layout_height="100dp"
			            android:layout_gravity="center_horizontal"
			            android:src="@drawable/canbo_big_logo" />	     
			        <ImageView
			            android:id="@+id/imageView2"
			            android:layout_width="200dp"
			            android:layout_height="60dp"
			            android:layout_below="@id/imageView1"
			            android:layout_gravity="center_horizontal"
			            android:src="@drawable/canbo_text" />
	            </LinearLayout>	        
        </ScrollView>
      

    </RelativeLayout>
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/login_lin_btns"
	    android:layout_alignParentBottom="true"        
        android:orientation="horizontal">
        
	    <Button
	        android:layout_weight="1"
	        android:layout_margin="8dp"
	        android:id="@+id/login_btn_lan"
	        android:layout_width="0dp"
	        android:layout_height="60dp"
	        android:background="@drawable/main_btn_selector"
	        android:text="@string/login_lan" />
	    
	    <Button
	        android:layout_weight="1"
	        android:layout_margin="8dp"
	        android:id="@+id/login_btn_login"
	        android:layout_width="0dp"
	        android:layout_height="60dp"
	        android:background="@drawable/main_btn_selector"
	        android:text="@string/login_login" />
	    
    </LinearLayout>
</RelativeLayout>